2010-11-30  Julius Baxter <julius@opencores.org>
	* cpu/or1k/sprs.c: Clarify commenting on PIC_PICSR register.
	* peripheral/eth.c: Many changes.	

2010-11-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* configure: Regenerated.
	* configure.ac: Updated version.
	* peripheral/eth.c: Now uses TUN/TAP tunnelling. ETH_PHY
	conditional compilation removed throughout.
	<struct eth_device>: Redundant fields removed. New fields added.
	(eth_controller_tx_clock): Use write to TAP instead of sendto
	socket.
	(eth_controller_rx_clock): Use read from TAP instead of recv from
	socket.
	(eth_reset): Socket initialization replaced by opening TAP.
	(eth_rtx_type): Now string parameter. Currently "FILE" or "TAP"
	permitted.
	(eth_tap_dev): Created.
	(eth_sock_if): Deleted.
	(eth_sec_start, eth_sec_end, reg_ethernet_sec): Updated to add
	tap_dev.
	* peripheral/etch.h: ETH_PHY conditional compilation removed
	throughout.

2010-11-25  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* configure: Regenerated.
	* configure.ac: Updated version.
	* cpu/or1k/sprs.c (mtspr): Setting PICMR considers NMI usage.
	* doc/or1ksim.texi <Interrupt Configuration>: Documented the PIC
	use_nmi config.
	* libtoplevel.c (or1ksim_interrupt): Does not clear interrupts
	immediately.
	* NEWS: Updated regarding PIC configuration.
	* pic/pic.c (pic_reset): Reference to PICPR
	removed. Initialization considers NMI use.
	(report_interrupt): NMI now handled through PICMR, rather than
	directly in the code.
	(pic_use_nmi): Created.
	(pic_reg_sec): Added "use_nmi" option.
	* sim-config.c (init_defconfig): config.pic.use_nmi initialized.
	* sim-config.h <config.pic>: New entry use_nmi added.

2010-11-24  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* configure: Regenerated.
	* configure.ac: Updated version.
	* doc/or1ksim.texi: More clarification of interrupt behavior when
	edge or level triggered.
	* pic/pic.c (report_interrupt): Improved warning when interrupt is
	reported while previous one is pending.